--- a/verify_seebuoy.ipynb
+++ b/verify_seebuoy.ipynb
@@ -386,6 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#inverted everything so that it lines up with ndbc\n",
     "see_buoy = see_buoy[::-1]"
    ]
   },
