--- a/verify_seebuoy.ipynb
+++ b/verify_seebuoy.ipynb
@@ -1582,7 +1582,7 @@
     "        print(i)\n",
     "        print(\"see_buoy \", see_buoyList[i])\n",
     "        print(\"ndbc \", ndbcList[i])\n",
-    "        print"
+    "        print()"
    ]
   }
  ],
