--- a/Matloock_copy_time_series_split.ipynb
+++ b/Matloock_copy_time_series_split.ipynb
@@ -694,9 +694,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(16,8))\n",
-    "plt.plot(ny_buoy_df.index[-600:], ny_buoy_df['average_period'].tail(600), color='green', label = 'Train Average Period')\n",
-    "plt.plot(test_data.index, y, color = 'red', label = 'Real Average Period')\n",
-    "plt.plot(test_data.index, predictions, color = 'blue', label = 'Predicted Average Period')\n",
+    "plt.plot(ny_buoy_df[\"date\"], ny_buoy_df['average_period'].tail(600), color='green', label = 'Train Average Period')\n",
+    "plt.plot(test_data[\"date\"], y, color = 'red', label = 'Real Average Period')\n",
+    "plt.plot(test_data[\"date\"], predictions, color = 'blue', label = 'Predicted Average Period')\n",
     "plt.title('Average Period Prediction')\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('Average Period')\n",
