--- a/MatlocksCodeWithHistoricalData.ipynb
+++ b/MatlocksCodeWithHistoricalData.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Team Benchmark\n",
     "\n",
-    "**Authors:** Marissa Nicole Esteban, Gabe Krishnadasan, Diana Montoya-Herrera, Gabe Seidl, Madeleine Woo\n",
+    "**Authors:** Marissa Nicole Esteban, Gabe Krishnadasan, Diana Montoya-Herrera, Gabe Seidl, Madeleine Woo, Daniel Matlock\n",
     "\n",
     "**Date:** 10/5/2023"
    ]
