Added fucntionality for wave height prediction

--- a/ProphetAlgorithm.ipynb
+++ b/ProphetAlgorithm.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -781,13 +781,15 @@
    ],
    "source": [
     "# lets limit the df to 2 columns: date and wave height\n",
-    "ny_buoy_df = df_data[[\"date\",\"wave_height\"]]\n",
+    "ny_buoy_df = df_data[[\"date\",\"wave_height\", \"average_period\"]]\n",
     "\n",
     "# Set 'date' column as the index\n",
     "ny_buoy_df = ny_buoy_df.set_index(\"date\")\n",
     "\n",
     "ny_buoy_df['wave_height_interpolated'] = ny_buoy_df['wave_height'].interpolate(method='time') # interpolate missing values based on time\n",
+    "ny_buoy_df['average_period_interpolated'] = ny_buoy_df['average_period'].interpolate(method='time') # interpolate missing values based on time\n",
     "ny_buoy_df['interpolation_indicator'] = ny_buoy_df['wave_height'].isna()\n",
+    "ny_buoy_df['interpolation_indicator'] = ny_buoy_df['average_period'].isna()\n",
     "\n",
     "ny_buoy_df = ny_buoy_df.reset_index()\n",
     "\n",
@@ -1491,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,14 +1526,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doit(f, c):\n",
+    "def doit(f, c, target):\n",
+    "    \"\"\"\n",
+    "    Parameters:\n",
+    "    f : floor value, how many days back to train the model on\n",
+    "\n",
+    "    c : ceiling value, how many days we want to predict for (want 10-15 days)\n",
+    "\n",
+    "    target : either \"wave_height\" or \"average_period\". Variable we want to traiun and predict on.\n",
+    "    \"\"\"\n",
+    "    if target != \"wave_height\" and target != \"average_period\":\n",
+    "        print(\"Not a valid target variable\")\n",
+    "        return\n",
+    "\n",
     "    #Sets up date objects and floor and ceiling\n",
     "    today_date = datetime.today().date()\n",
-    "    floor = f\n",
+    "    floor = f + c\n",
     "    ceiling = c\n",
     "\n",
     "    # Calculate the floordate and the ceiling date\n",
@@ -1544,12 +1558,9 @@
     "    recent_df = ny_buoy_df[ny_buoy_df['date'] > pd.Timestamp(ceilingDate)]\n",
     "    past_df = ny_buoy_df[(ny_buoy_df['date'] > pd.Timestamp(floorDate)) & (ny_buoy_df['date'] < pd.Timestamp(ceilingDate))]\n",
     "\n",
-    "    #TESTING AREAAAAA\n",
-    "\n",
-    "\n",
     "    #Sets up the modeling df with the date and target variable column as well as the cap for logistic growth prophet algo\n",
-    "    modeling_df = past_df[[\"date\",\"wave_height_interpolated\"]]\n",
-    "    modeling_df = modeling_df.rename(columns={\"date\": \"ds\", \"wave_height_interpolated\": \"y\"})\n",
+    "    modeling_df = past_df[[\"date\",f'{target}_interpolated']]\n",
+    "    modeling_df = modeling_df.rename(columns={\"date\": \"ds\", f'{target}_interpolated': \"y\"})\n",
     "    cap = modeling_df['y'].max() + 1\n",
     "\n",
     "    # Initialize Prophet model with the cap\n",
@@ -1565,30 +1576,30 @@
     "    forecast['date'] = forecast['ds']\n",
     "    merged_df = pd.merge(forecast.tail(15), recent_df, on='date', how='left')\n",
     "\n",
-    "    print(f\"RMSE for 15 days using {floor - 15} days worth of training data\")\n",
-    "    print(rmse(merged_df[\"wave_height_interpolated\"], merged_df[\"yhat\"]))\n",
+    "    print(f\"RMSE for {ceiling} days using {floor - 15} days worth of training data for {target}\")\n",
+    "    print(rmse(merged_df[f'{target}_interpolated'], merged_df[\"yhat\"]))\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:55:18 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:55:22 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "15:23:03 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "15:23:07 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 15 days using 365 days worth of training data\n",
-      "0.9371470510960095\n",
+      "RMSE for 15 days using 365 days worth of training data for average_period\n",
+      "1.2206615260432754\n",
       "\n"
      ]
     },
@@ -1596,16 +1607,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:55:26 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:55:34 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "15:23:11 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "15:23:24 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 15 days using 730 days worth of training data\n",
-      "0.9788624816682632\n",
+      "RMSE for 15 days using 730 days worth of training data for average_period\n",
+      "1.2438993856421765\n",
       "\n"
      ]
     },
@@ -1613,74 +1624,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:55:43 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:55:52 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "15:23:34 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "15:23:52 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 15 days using 1095 days worth of training data\n",
-      "0.8489199970793632\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14:56:06 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:56:24 - cmdstanpy - INFO - Chain [1] done processing\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE for 15 days using 1460 days worth of training data\n",
-      "0.8558245403512575\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14:56:42 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:57:02 - cmdstanpy - INFO - Chain [1] done processing\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE for 15 days using 1825 days worth of training data\n",
-      "0.8520057087728798\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14:57:24 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:57:50 - cmdstanpy - INFO - Chain [1] done processing\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE for 15 days using 2190 days worth of training data\n",
-      "0.8484094742597307\n",
+      "RMSE for 15 days using 1095 days worth of training data for average_period\n",
+      "1.3199363200490066\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for i in range(380, 2206, 365):\n",
-    "    doit(i, 15)"
+    "for i in range(365, 1460, 365):\n",
+    "    doit(i, 15, \"average_period\")"
    ]
   },
   {
