Added more testing

--- a/prophetTesting.ipynb
+++ b/prophetTesting.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "# import libraries needed\n",
     "from seebuoy import NDBC\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +82,13 @@
     "    ndbc = NDBC(timeframe=\"historical\")\n",
     "    df_avail = ndbc.available_data(station_id=buoyNum)\n",
     "    df_data = ndbc.get_data(buoyNum)\n",
-    "\n",
+    "        \n",
     "    df_data.dropna(axis=1, how='all', inplace=True)\n",
     "    df_data = df_data.reset_index()\n",
+    "\n",
+    "    if 'wave_height' not in df_data.columns or 'average_period' not in df_data.columns:\n",
+    "        print(\"Not enough data\")\n",
+    "        return False\n",
     "\n",
     "    # lets limit the df to 2 columns: date and wave height\n",
     "    buoy_df = df_data[[\"date\",\"wave_height\", \"average_period\"]]\n",
@@ -92,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doit(buoy_df, f, c, target, buoyNum):\n",
+    "def doit(f, c, target, buoyNum):\n",
     "    \"\"\"\n",
     "    Parameters:\n",
     "    f : floor value, how many days back to train the model on\n",
@@ -105,6 +117,13 @@
     "\n",
     "    target : either \"wave_height\" or \"average_period\". Variable we want to traiun and predict on.\n",
     "    \"\"\"\n",
+    "    buoy_df = buoySetUp(buoyNum)\n",
+    "\n",
+    "    if type(buoy_df) == bool:\n",
+    "        return\n",
+    "\n",
+    "    buoy_df = buoy_df.reset_index()\n",
+    "\n",
     "    if target != \"wave_height\" and target != \"average_period\":\n",
     "        print(\"Not a valid target variable\")\n",
     "        return\n",
@@ -149,23 +168,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not enough data\n"
+     ]
+    }
+   ],
+   "source": [
+    "doit(365, 15, \"wave_height\", \"41064\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:44:53 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:44:58 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "14:34:20 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:34:26 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 46239 for 15 days using 365 days worth of training data for wave_height\n",
-      "0.7381412655699661\n",
+      "RMSE for 46239 for 15 days using 365 days worth of training data for average_period\n",
+      "1.5782466136886855\n",
       "\n"
      ]
     },
@@ -173,16 +209,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:45:13 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:45:18 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "14:34:41 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:34:47 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 46258 for 15 days using 365 days worth of training data for wave_height\n",
-      "0.3796250863542164\n",
+      "RMSE for 46258 for 15 days using 365 days worth of training data for average_period\n",
+      "1.7075612441443435\n",
       "\n"
      ]
     },
@@ -190,16 +226,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:45:39 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:45:41 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "14:35:11 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:35:28 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 46232 for 15 days using 365 days worth of training data for wave_height\n",
-      "0.4713763422654524\n",
+      "RMSE for 46232 for 15 days using 365 days worth of training data for average_period\n",
+      "1.43403613958504\n",
       "\n"
      ]
     },
@@ -207,16 +243,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:46:28 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:46:53 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "14:36:09 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:36:44 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 42001 for 15 days using 365 days worth of training data for wave_height\n",
-      "0.8409574676069215\n",
+      "RMSE for 42001 for 15 days using 365 days worth of training data for average_period\n",
+      "1.217700567548797\n",
       "\n"
      ]
     },
@@ -224,43 +260,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:47:35 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:05 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "14:37:29 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:38:13 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for 41002 for 15 days using 365 days worth of training data for wave_height\n",
-      "0.9279168916864616\n",
+      "RMSE for 41002 for 15 days using 365 days worth of training data for average_period\n",
+      "1.0701111993389985\n",
       "\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "\"['average_period'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m buoy_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m46239\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m46258\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m46232\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m42001\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m41002\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m44037\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m44097\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m44009\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m41064\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m buoyNum \u001b[38;5;129;01min\u001b[39;00m buoy_list:\n\u001b[0;32m----> 5\u001b[0m     buoy_df \u001b[38;5;241m=\u001b[39m \u001b[43mbuoySetUp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuoyNum\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m     buoy_df \u001b[38;5;241m=\u001b[39m buoy_df\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[1;32m      7\u001b[0m     doit(buoy_df, \u001b[38;5;241m365\u001b[39m, \u001b[38;5;241m15\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwave_height\u001b[39m\u001b[38;5;124m\"\u001b[39m, buoyNum)\n",
-      "Cell \u001b[0;32mIn[8], line 10\u001b[0m, in \u001b[0;36mbuoySetUp\u001b[0;34m(buoyNum)\u001b[0m\n\u001b[1;32m      7\u001b[0m df_data \u001b[38;5;241m=\u001b[39m df_data\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# lets limit the df to 2 columns: date and wave height\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m buoy_df \u001b[38;5;241m=\u001b[39m \u001b[43mdf_data\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwave_height\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43maverage_period\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Set 'date' column as the index\u001b[39;00m\n\u001b[1;32m     13\u001b[0m buoy_df \u001b[38;5;241m=\u001b[39m buoy_df\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/2024S/COMP492/Benchmark-Code/.venv/lib/python3.11/site-packages/pandas/core/frame.py:3813\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3812\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3813\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3815\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-      "File \u001b[0;32m~/Desktop/2024S/COMP492/Benchmark-Code/.venv/lib/python3.11/site-packages/pandas/core/indexes/base.py:6070\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6067\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   6068\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6070\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   6072\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   6073\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6074\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/2024S/COMP492/Benchmark-Code/.venv/lib/python3.11/site-packages/pandas/core/indexes/base.py:6133\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6130\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6132\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m-> 6133\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['average_period'] not in index\""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "14:38:36 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:38:49 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for 44097 for 15 days using 365 days worth of training data for average_period\n",
+      "1.1053278190668125\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "14:39:25 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:40:13 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for 44009 for 15 days using 365 days worth of training data for average_period\n",
+      "0.8160995611196501\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "buoy_list = [\"46239\", \"46258\", \"46232\", \"42001\", \"41002\", \"44037\", \"44097\", \"44009\", \"41064\"]\n",
+    "buoy_list = [\"46239\", \"46258\", \"46232\", \"42001\", \"41002\", \"44097\", \"44009\"]\n",
     "\n",
     "\n",
     "for buoyNum in buoy_list:\n",
-    "    buoy_df = buoySetUp(buoyNum)\n",
-    "    buoy_df = buoy_df.reset_index()\n",
-    "    doit(buoy_df, 365, 15, \"wave_height\", buoyNum)"
+    "    doit(365, 15, \"average_period\", buoyNum)"
    ]
   }
  ],
