adding output script for linear regression

--- a/outputs.ipynb
+++ b/outputs.ipynb
@@ -1776,6 +1776,45 @@
     "     predicted = str(round(row['yhat'],2))\n",
     "     print(\"{:<30} {:<30} {:<10}\".format(day, predicted, high_low ))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LINEAR REGRESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import output_script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_prediction, rf_predictions = output_script.get_predictions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"{:<30} {:<30} {:<10}\".format(\"Date\", \"Wave Height Forecasted (m)\", \"yhat upper / yhat lower\"))\n",
+    "print()\n",
+    "\n",
+    "for i in range(15):\n",
+    "    \n",
+    "    day = datetime.strptime(str(row['ds']), \"%Y-%m-%d %H:%M:%S\").strftime(\"%A %B %d\")"
+   ]
   }
  ],
  "metadata": {
